Fix issue with In-Product Help demo mode.

In demo-mode (enabled through chrome://flags), the configuration for
In-Product Help was just something that was created at runtime, and the
only FeatureConfig field that was set was whether it was valid or not.

However, as part of being able to track that a feature triggering has
happened, it is now required to also have a trigger event name so the
configuration can decide what that field name can be. This was only set
in the Chrome Variations configuration and in tests, and not in the demo
mode.

This CL therefore just appends "_trigger" to the feature name and uses
that as the trigger event name when in demo-mode.

BUG=723111, 723009

Change-Id: I62b9507c2bd12c296184bedfb98bbe218923b374
Reviewed-on: https://chromium-review.googlesource.com/507787
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Tommy Nyquist <nyquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472505}
Former-commit-id: 44ba9092273b822880e06cef6c59a24d40c9df05